--- a/import-service/package.json
+++ b/import-service/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "product-service",
+  "name": "import-service",
   "version": "1.0.0",
-  "description": "Product-service",
+  "description": "Import-service",
   "main": "serverless.ts",
   "scripts": {
-    "test": "jest",
-    "fillTables": "npx ts-node ./src/db/fillTables.ts"
+    "test": "jest"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.428.0",
-    "@aws-sdk/lib-dynamodb": "^3.428.0",
+    "@aws-sdk/client-s3": "^3.430.0",
+    "@aws-sdk/s3-request-presigner": "^3.430.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
-    "uuid": "^9.0.1",
-    "yup": "^1.3.2"
+    "csv-parser": "^3.0.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
