--- a/import-service/package.json
+++ b/import-service/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.430.0",
+    "@aws-sdk/client-sqs": "^3.436.0",
     "@aws-sdk/s3-request-presigner": "^3.430.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
